# technopark_hw

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
coverage-report/: index-sort-f.html  index-sort-l.html  index.html
coverage-report/gtest/: gtest-message.h.func-sort-c.html  gtest-message.h.func.html  gtest-message.h.gcov.html  gtest-printers.h.func-sort-c.html  gtest-printers.h.func.html  gtest-printers.h.gcov.html  gtest.h.func-sort-c.html  gtest.h.func.html  gtest.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage-report/gtest/internal/: gtest-internal.h.func-sort-c.html  gtest-internal.h.func.html  gtest-internal.h.gcov.html  gtest-port.h.func-sort-c.html  gtest-port.h.func.html  gtest-port.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage-report/home/timas/technopark_hw/technopark_hw1/src/: custom_string.c.func-sort-c.html  custom_string.c.func.html  custom_string.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html  mail_check_spam.c.func-sort-c.html  mail_check_spam.c.func.html  mail_check_spam.c.gcov.html
coverage-report/home/timas/technopark_hw/technopark_hw1/tests/: index-sort-f.html  index-sort-l.html  index.html  tests.cpp.func-sort-c.html  tests.cpp.func.html  tests.cpp.gcov.html
coverage-report/usr/include/c++/5/: index-sort-f.html  index-sort-l.html  index.html  iostream.func-sort-c.html  iostream.func.html  iostream.gcov.html  tuple.func-sort-c.html  tuple.func.html  tuple.gcov.html
coverage-report/usr/include/c++/5/bits/: index-sort-f.html  index-sort-l.html  index.html  ios_base.h.func-sort-c.html  ios_base.h.func.html  ios_base.h.gcov.html  move.h.func-sort-c.html  move.h.func.html  move.h.gcov.html  unique_ptr.h.func-sort-c.html  unique_ptr.h.func.html  unique_ptr.h.gcov.html
include/: custom_string.h  file_utils.h  file_utils_dynamic.h  file_utils_static.h  input.h  mail_check_spam.h
src/: custom_string.c  file_utils.c  file_utils_common.c  file_utils_consistent.c  file_utils_const.c  file_utils_dynamic.c  file_utils_parallel.c  file_utils_static.c  fill_file_utils.c  input.c  mail_check_spam.c  main.c
tests/: stress_test_dynamic.c  stress_test_static.c  stress_tests_controller.c  tests.cpp  unit_tests.cpp  unit_tests_consistent.cpp  unit_tests_const.cpp  unit_tests_dynamic.cpp  unit_tests_parallel.cpp  unit_tests_static.cpp
